[gd_scene load_steps=2 format=3 uid="uid://bxu6emio4k3dj"]

[ext_resource type="Script" path="res://mats/game_card/order_cont.gd" id="1_otwil"]

[node name="order_cont" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_otwil")

[node name="crdnum" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.043
anchor_bottom = 0.043
offset_top = -24.08
offset_right = 119.0
offset_bottom = -0.0800008
text = "CARD_NUMBER"

[node name="num" type="Label" parent="crdnum"]
layout_mode = 0
offset_top = 24.0
offset_right = 40.0
offset_bottom = 47.0
text = "7126386184718417"

[node name="order" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.252
anchor_right = 0.252
offset_left = 0.159996
offset_right = 119.16
offset_bottom = 24.0
text = "ORDER_STATUS"

[node name="status" type="Label" parent="order"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_right = 72.0
offset_bottom = 23.0
grow_vertical = 0
text = "WAIT|SUCCES"

[node name="datelabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.444
anchor_top = 0.038
anchor_right = 0.444
anchor_bottom = 0.038
offset_left = -0.384007
offset_top = -24.016
offset_right = 47.616
offset_bottom = -0.0159992
text = "DATE"

[node name="date" type="Label" parent="datelabel"]
layout_mode = 1
offset_left = 16.0
offset_top = 24.0
offset_right = 56.0
offset_bottom = 48.0
text = "23.23.2323"

[node name="order_sum" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.613
anchor_right = 0.613
offset_left = 127.632
offset_right = 224.632
offset_bottom = 24.0
text = "ORDER_SUM"

[node name="num" type="Label" parent="order_sum"]
layout_mode = 0
offset_left = 24.0
offset_top = 24.0
offset_right = 144.0
offset_bottom = 48.0
text = "000000"

[node name="sc_i" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 56.0
grow_horizontal = 2
grow_vertical = 2

[node name="list" type="HFlowContainer" parent="sc_i"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="pay" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -104.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 47.0
grow_horizontal = 0
text = "PAYMENT"

[connection signal="button_down" from="pay" to="." method="_on_pay_button_down"]
